      updates and deletes (2.1+ only).

0.4.7
=====
- orm
    - The contains() operator when used with many-to-many
      will alias() the secondary (association) table so
      that multiple contains() calls will not conflict
      with each other [ticket:1058]

    - fixed bug preventing merge() from functioning in 
      conjunction with a comparable_property()
      
- mysql
    - Added 'CALL' to the list of SQL keywords which return
      result rows.

- oracle
    - Oracle get_default_schema_name() "normalizes" the name
      before returning, meaning it returns a lower-case name
      when the identifier is detected as case insensitive.

    - creating/dropping tables takes schema name into account
      when searching for the existing table, so that tables
      in other owner namespaces with the same name do not
      conflict [ticket:709]

    - Cursors now have "arraysize" set to 50 by default on 
      them, the value of which is configurable using the 
      "arraysize" argument to create_engine() with the
      Oracle dialect.  This to account for cx_oracle's default 
      setting of "1", which has the effect of many round trips 
      being sent to Oracle.  This actually works well in 
      conjunction with BLOB/CLOB-bound cursors, of which 
      there are any number available but only for the life of 
      that row request (so BufferedColumnRow is still needed, 
      but less so). [ticket:1062]


0.4.6
=====
- orm
    - Fix to the recent relation() refactoring which fixes
      exotic viewonly relations which join between local and
      remote table multiple times, with a common column shared
      between the joins.

    - Also re-established viewonly relation() configurations
      that join across multiple tables.

    - Added experimental relation() flag to help with
      primaryjoins across functions, etc.,
      _local_remote_pairs=[tuples].  This complements a complex
      primaryjoin condition allowing you to provide the